# frakview

./: .gitignore  CMakeLists.txt
cmake/: add_library_inih.cmake  inih.cmake
etc/: default.ini  julia1.ini  julia2.ini  julia3.ini
src/: CMakeLists.txt  frakview.c
